# uhi

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CITATION.cff  README.md  environment.yml  noxfile.py  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md  release.yml
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml
docs/: changelog.md  conf.py  index.rst  indexing+.rst  indexing.rst  plotting.rst  serialization.md  testing.md
src/uhi/: numpy_plottable.py  schema.py  tag.py
src/uhi/_compat/: typing.py
src/uhi/io/: __init__.py  _common.py  hdf5.py  json.py  zarr.py  zip.py
src/uhi/resources/: histogram.json  histogram.schema.json
src/uhi/testing/: indexing.py
src/uhi/typing/: plottable.py  serialization.py
tests/: conftest.py  test_ensure.py  test_hdf5.py  test_histogram_schema.py  test_json.py  test_root.py  test_serialization.py  test_sparse.py  test_testing.py  test_uhi.py  test_zarr.py  test_zip.py
tests/resources/: reg.json
tests/resources/invalid/: metadata_nested.error.txt  metadata_nested.json  missing_axis.error.txt  missing_axis.json  missing_storage.error.txt  missing_storage.json
tests/resources/valid/: 2d.json  empty_storage.json  mean.json  noaxes.json  reg.json  sparse.json
tests/utils/: __init__.py  helpers.py
uhi/typing/: plottable.py
