[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uhi"
description = "Unified Histogram Interface: tools to help library authors work with histograms"
authors = [
  {name="Henry Schreiner", email="henryschreineriii@gmail.com"},
  {name="Hans Dembinski", email="hans.dembinski@gmail.com"},
  {name="Jim Pivaski", email="pivarski@princeton.edu"},
]
maintainers = [
  {name="The Scikit-HEP admins", email="scikit-hep-admins@googlegroups.com"},
]
requires-python = ">=3.7"
readme = "README.md"
license = {file="LICENSE"}
dependencies = [
  "numpy>=1.13.3",
  "typing-extensions>=3.7; python_version<'3.8'",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Scikit-HEP/uhi"
Repository = "https://github.com/Scikit-HEP/uhi"
Documentation = "https://uhi.readthedocs.io/en/latest/"
Changelog = "https://github.com/scikit-hep/uhi/releases"

[project.optional-dependencies]
docs = [
  "sphinx>=4.0",
  "furo",
  "sphinx-copybutton>=0.3.1",
  "myst-parser",
]
test = [
  "pytest>=6",
  "importlib-metadata>=1.0; python_version<'3.8'",
  "boost-histogram>=1.0",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/uhi/_version.py"

[tool.pdm.dev-dependencies]
dev = [
  "pytest>=6",
  "importlib-metadata>=1.0; python_version<'3.8'",
  "boost-histogram>=1.0",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
log_cli_level = "info"


[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = "true"
strict = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
extend-ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "PT004",  # Use underscore for non-returning fixture (use usefixture instead)
  "PT013",  # Incorrect import of pytest
]
typing-modules = ["mypackage._compat.typing"]
src = ["src"]
unfixable = [
  "T20",   # Removes print statements
  "F841",  # Removes unused variables
]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"tests/test_ensure.py" = ["NPY002"]
