[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uhi"
description = "Unified Histogram Interface: tools to help library authors work with histograms"
authors = [
  {name="Henry Schreiner", email="henryschreineriii@gmail.com"},
  {name="Hans Dembinski", email="hans.dembinski@gmail.com"},
  {name="Jim Pivaski", email="jpivarski@gmail.com"},
  {name="Silia Taider", email="siliataider@gmail.com"},
]
maintainers = [
  {name="The Scikit-HEP admins", email="scikit-hep-admins@googlegroups.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = "bsd-3-clause"
license-files =["LICENSE"]
dependencies = [
  "numpy>=1.19.3",
  "typing_extensions>=4; python_version<'3.11'",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Scikit-HEP/uhi"
Repository = "https://github.com/Scikit-HEP/uhi"
Documentation = "https://uhi.readthedocs.io/en/latest/"
Changelog = "https://github.com/scikit-hep/uhi/releases"

[project.optional-dependencies]
schema = [
  "fastjsonschema",
  "importlib-resources; python_version<'3.9'",
]
hdf5 = [
  "h5py",
]

[dependency-groups]
docs = [
  "sphinx>=4.0",
  "furo",
  "sphinx-copybutton>=0.3.1",
  "sphinx-jsonschema",
  "myst-parser",
  "sphinx_github_changelog",
]
test-core = [
  "pytest>=6",
  "boost-histogram>=1.4",
  "hist>=2.6",
  "fastjsonschema",
  "packaging",
]
test = [
  { include-group = "test-core" },
  "h5py; platform_python_implementation == 'CPython' and python_version<'3.14'",  # Doesn't support free-threaded Python currently
]
dev = [{ include-group = "test" }]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/uhi/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
log_cli_level = "INFO"


[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = ["fastjsonschema", "h5py"]
ignore_missing_imports = true


[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Design related pylint codes
  "PLR2004",  # Magic value in comparison
  "PT013",    # Incorrect import of pytest
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PLC0415"]
"noxfile.py" = ["T20"]
"tests/test_ensure.py" = ["NPY002"]
"src/**" = ["PT"]
